# RedditAudioAnalysis

./: BUSINESS_QUESTIONS.md  EDA.md  LICENSE  ML.md  NLP.md  README.md  SCHEMA_EXAMINATION.md  WEBSITE.md  examine_reddit_schema.py  project-feedback-guidelines.md  pyproject.toml  reddit-s3-copy-instructions.md
code/: .gitkeep
code/eda/: eda_q1.py  eda_q2.py  eda_q3.py  eda_temporal_subreddit_s3.py  temporal_eda_q1_plotting.py
code/ml/: feature_importance_analysis.py  manual_feature_importance.py  ml-bot-detection.py  ml-classification.py  ml-regression.py  ml-sentiment.py  painpoint_clustering_sklearn.py  painpoint_clustering_spark.py
code/nlp/: earbud_emotions.py  nlp_airpods_usbc_launch.py  nlp_concern.py  nlp_features_painpoints.py
data/csv/: eda_airpods_monthly_volume_by_type.csv  eda_airpods_volume_by_period.csv  eda_airpods_weekly_volume.csv  eda_dataset_summary.csv  eda_engagement_metrics.csv  eda_q3_content_type_engagement.csv  eda_q3_correlation_matrix.csv  eda_q3_day_of_week_engagement.csv  eda_q3_hourly_engagement.csv  eda_q3_score_bins_engagement.csv  eda_q3_summary.csv  eda_q3_title_length_engagement.csv  eda_subreddit_statistics.csv  eda_summary_statistics.csv  eda_temporal_by_hour_overall.csv  eda_temporal_by_hour_subreddit.csv  eda_temporal_by_hour_subredditnotech.csv  eda_temporal_by_y_m_dow_overall.csv  eda_temporal_by_y_m_dow_subreddit.csv  eda_temporal_by_y_m_dow_subredditnotech.csv  (+32 more)
docs/: conclusion.html  eda.html  index.html  ml.html  nlp.html  search.json  styles.css
spark-cluster/: AUTOMATION_README.md  LICENSE  README.md  SPARK_CLUSTER_SETUP.md  cleanup-spark-cluster.sh  cluster-ips.txt  pyproject.toml  setup-spark-cluster.sh  ssh_to_master_node.sh
spark-cluster/cluster-files/: generate_dataset_statistics.py  nyc_tlc_problem1.ipynb  nyc_tlc_problem1.py  nyc_tlc_problem1_cluster.py  pyproject.toml  reddit_data_filter_example.py  spark_installation_test.py  test_nyc_data_read.py
website-source/: .gitignore  README.md  _quarto.yml  conclusion.qmd  eda.qmd  index.qmd  ml.qmd  nlp.qmd  styles.css
(+57 files in other folders)
