[project]
name = "lab-spark-cluster"
version = "0.1.0"
description = "Step-by-step guide for setting up a 3-node Apache Spark cluster on AWS EC2"
requires-python = ">=3.10"
dependencies = [
    "awscli>=1.42.35",
    "pyspark>=4.0.0",
    "pandas>=2.0.0",
    "ipykernel>=6.30.1",
]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lab_spark_cluster"]
